add a link to the repo in the icon

--- a/manifest.json
+++ b/manifest.json
@@ -6,12 +6,20 @@
   "description": "Adds a \"Quick Reply\" button to GitHub.",
 
   "icons": {
-    "48": "icons/border-48.png"
+    "48": "icons/icon-48.png"
   },
 
   "permissions": [
-    "activeTab"
+    "activeTab",
+    "tabs"
   ],
+
+  "browser_action": {
+    "default_icon": {
+      "48": "icons/icon-48.png"
+    },
+    "default_popup": "popup/popup.html"
+  },
 
   "content_scripts": [
     {
