--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
   "name": "Quick Reply for GitHub",
   "version": "1.0",
 
-  "description": "Adds a \"Quick Reply\" button to GitHub.",
+  "description": "Adds a \"Quick Reply\" button to GitHub issues and PRs.",
 
   "icons": {
     "48": "icons/icon-48.png"
